Don't use deprecated Number constructors.
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>